package metapb

type (
	// DBID is a custom type for database ID
	DBID = uint32
	// SpaceID is a custom type for space ID
	SpaceID = uint32
	// PartitionID is a custom type for partition ID
	PartitionID = uint32
	// SlotID is a custom type for slot ID
	SlotID = uint32
	// ReplicaID is a custom type for repl ID
	ReplicaID = uint32
	// NodeID is a custom type for node ID
	NodeID = uint32
	// Key is a custom type for key
	Key = []byte
	// Value is a custom type for key
	Value = []byte
)
